Opened 18 years ago
Closed 17 years ago
#1423 closed bug (fixed)
App Network Preferences fails to recover gateway ip after reboot
Reported by: | sicutdeux | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1/alpha1 |
Component: | Servers/net_server | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | x86 |
Description (last modified by )
Gateway not added to routes on boot, but only when triggering the settings to be reloaded.
Change History (8)
comment:1 by , 18 years ago
Summary: | App Network References fails to recover gateway ip after reboot → App Network Preferences fails to recover gateway ip after reboot |
---|
comment:2 by , 17 years ago
Owner: | changed from | to
---|
comment:3 by , 17 years ago
comment:4 by , 17 years ago
Component: | - Preferences/Network → Servers/net_server |
---|---|
Description: | modified (diff) |
Milestone: | R1 → R1/alpha |
Owner: | changed from | to
I investigated a bit, and this should be a net_server bug, not a bug of the Network preflet. With the exact same settings file: on boot, net_server fails to add the gateway route in manual settings mode. When the Network preflet is used to (re)write the exact same settings file, the gateway is added propery. At first I thought it might be a problem in which order the settins are applied (the gateway is considered as pretty much the first thing), I thought it might need the other settings to be originally applied to work, but moving the gateway stuff down as the last thing in NetServer.cpp didn't help.
comment:7 by , 17 years ago
Status: | new → assigned |
---|
The resolv.conf file should now be written if it doesn't exist yet. (hrev22366)