Now only removes a default route for a domain in case a new one is specified; this fixes bug #1423, the loop interface removed the default route for the other interface (didn't happen previously, as routes were bound to devices).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@22723 a95241bf-73f2-0310-859d-f6bbb57e9c96